# bncpy

./: .flake8  .gitignore  README.md  example.py  pyproject.toml  readmeai-openai.md  requirements.txt  state.py
.github/workflows/: publish.yml
bnc/: __init__.py  board.py  game.py  player.py  state.py  utils.py
examples/: example.py  example_original.py  example_state.py
tests/: test_board.py  test_game.py  test_integration.py  test_player.py  test_state.py  test_utils.py
